tests/ui/let-else/issue-94176.stderr
error[E0308]: mismatched types
  --> $DIR/issue-94176.rs:5:32
   |
LL | pub fn test(a: Option<u32>) -> Option<u32> {
   |        ----                    ^^^^^^^^^^^ expected `Option<u32>`, found `()`
   |        |
   |        implicitly returns `()` as its body has no tail or `return` expression
   |
   = note:   expected enum `Option<u32>`
           found unit type `()`
help: consider returning the local binding `a`
   |
LL ~     println!("Foo");
LL +     a
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
